--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <div class="nav">
             <div class="nav-option">
                 <i class="fa-solid fa-house"></i>
-                <a href="#" style="opacity: 1;">Home</a>
+                <!-- <a href="#" style="opacity: 1;">Home</a> -->
             </div>
 
             <div class="nav-option">
@@ -179,7 +179,7 @@
              
          </div>
          <div class="player-bar">
-            <span class="current-time">00.00</span> 
+            <!-- <span class="current-time">00.00</span>  -->
             <input type="range" min="0" max="100" step="1" class="progress-bar">
             <span class="total-time">3.33</span>
           </div>
