--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@
            </div>
          </div>
          <div class="controls">
-           
+            <div class="player-bar">
+                <span class="current-time">00.00</span> 
+                <input type="range" min="0" max="100" step="1" class="progress-bar">
+                <span class="total-time">3.33</span>
+            </div>
          </div>
        </div>
     </div>
