--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@
            <!-- --------------------footer---------------- -->
             <div class="footer">
                 <div class="line">
-                    <div>Legal</div>
-                    <div>Safty & Privacy Center</div>
-                    <div>Privacy Policy</div>
-                    <div>Cookies</div>
-                    <div>About Ads</div>
-                    <div>Accessibility</div>
+                    <ul>
+                    <i>Legal</i>
+                    <i>Safty & Privacy Center</i>
+                    <i>Privacy Policy</i>
+                    <i>Cookies</div>
+                    <i>About Ads</i>
+                    <i>Accessibility</i>
+                    </ul>
                 </div>
                 <div class="line">
                     <div class="year">O 2024Spotify AB</div>
