--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <div class="nav">
             <div class="nav-option">
                 <i class="fa-solid fa-house"></i>
-                <a href="#" style="opacity: 1;">Home</a>
+                <a href="#" style="opacity: 1;">Home hellow</a>
             </div>
 
             <div class="nav-option">
